fix svg colour while focused on mobile menu

--- a/powo-portal/src/main/frontend/src/sass/components/_header.scss
+++ b/powo-portal/src/main/frontend/src/sass/components/_header.scss
@@ -115,6 +115,14 @@
         &.last {
           margin-right: 0;
         }
+
+        &.about-toggle {
+          &:focus{
+            svg path {
+              fill: $kew-black; 
+            }
+          }
+        }
       }
       .toggle-nav {
         background-color: $White;
